# CodeWheel

./: .gitignore  git_push
C/: README.md  count.c  gb2312.c  ifdef.c  readconf.c  rgb_union.c  sin.c  union.c  volume.c  writefb.c
C++/: README.md  test.cpp
C++/c++_call_c/: Makefile  hello.c  m.sh  test.cpp
C++/c++_example_1.0/: date.h  human.cpp  human.h  main.cpp
C++/c++_example_2.0/: competitor.cpp  competitor.h  date.cpp  judge.cpp  judge.h  machcompetitor.cpp  machcompetitor.h  main.cpp
C++/c++_example_3.0/: Makefile  c++.pro  competitor.h  human.cpp  human.h  judge.cpp  judge.h  machcompetitor.h  main.cpp
C++/scoped_ptr/: ref_counted_object.h  ref_counter.h  test.cpp
C++/test/: list.cpp  string.cpp  string_len.cpp
C/FSM/: a.out  test1.c  test1.c~
C/algorithm/: a.c
C/buffer/: malloc.c  memalign.c  ring_buffer.c
C/cJSON/: Makefile  test  test.c
C/cfg/: cfg.c  gpu.conf
C/container_of/: container_of.c  offsetof.c
C/crypto/: Makefile  crc16.c  crc16.h  crc8.c  sha1.c  test.c
C/dump_stack/: Makefile  dump_arm_stack.c  dumpstack.h  test.c  test.s
C/file/: inotify.c  test_dir.c
C/gcc/: instrfunc.c  m.sh
C/hash/: primeForNumBits.c
C/inline/: Makefile  inline_test  inline_test+O2  inline_test+O2.s  inline_test.c  inline_test.i  inline_test.s  inline_test_dump+O2.s  inline_test_dump.s
C/kfifo/: kfifo.c  kfifo.h  test.c
C/lib/: Makefile  README.md  count.c  count.h  libpwd.sh  main.c
C/link_test/: SimpleSection.S  SimpleSection.c  SimpleSection.elf  SimpleSection.s
C/linux_demo/: Makefile
C/list/: double_list.h  list.c  sig_list.c
C/memory/: mtrace.sh  t_mtrace.c
C/numa/: README.md  m.sh  test.c  test_numa.c
C/pthread/: Makefile  atom_tst.c  create.c  mult_thread_test.c  mult_thread_test1.c  pthread.c  pthread_create.c  pthread_key.c  test.c  thread_name.c
C/raii/: cleanup.c  raii_malloc_free.c
C/section/: ldscript.lds  m.sh  m_section_test.sh  section_struct_demo.c  section_test.c
C/share_mem/: shm_key.c  shm_open.c  shm_test.c  shmwrite.c
C/signal/: m.sh  test.c
C/string/: char.c  dele_str_last_char.c  itoa.c  string.c  strtok.c
C/sync/: barrier_test.c
C/syslog/: syslog_test.c
C/test/: a.out  analysis_energy.c  atomic.c  base_conv.c  bus_error.c  clear.c  clk.c  clock_get_test.c  cnt.c  container_of_test.c  cpu_cache.c  datetime.c  define.c  dev_rgb.c  eventfd.c  file_mmap.c  fragment_memset.c  gcc.c  get_caller_func.c  get_mouse.c  heaptrack_tst.c  hexdump.c  hexdump_print.c  ifconfig.c  ll2c.c  log2.c  math.c  memcpy_test.c  mult_process_mutex.c  nvme_rw_test.c  offset_test.c  parameter.c  parse_conf.c  prefetch.c  prefetch.s  progress_bar.c  queue.c  random.c  rename_process.c  rgb.c  (+17 more)
C/thread/: m.sh  thread.c
CUDA/: README.md  demo_add.cu
SDL2/: .gitignore  CMakeLists.txt  README.md  play_bgra.c  png2yuv.c  sdl2-test.c  wget.sh
X11/: README.md  xorg-xs.conf  xorg-xs1.conf  xorg.conf.new-multi  xorg.conf.new-vga  xoverlay.cpp
android/: sync.sh  systrace-android.sh
android/debug/: README.md  check_so_error.py  net_adb.sh  unzip_ramdisk.sh
app/mouse_remote_control/: README.md
arm/armv8/: armv8_timer_cntvct.c  dump_cpu_regs.c  m.sh
arm/asm/: helloworld.c  helloworld.s  m.sh  test.c
arm/memset_test/: README.md  memset_tst.c
arm/neon/: a.c  a.sh  add.c  b.c  byte_order_rev.c  m.sh  matrix_4x4_mul.c  matrix_8x8_mul.c  (+3 more)
cmake/: .gitignore  CMakeLists.txt  Config.h.in  READMD.md  README.md  export.sh
cmake/include/: my_math.h
cmake/src/: CMakeLists.txt  main.c  my_math.c
cmake/temp-lib/: CMakeLists.txt  m.sh
cmake/temp-lib/include/: TEMP.h
cmake/temp-lib/scripts/: cmake_for_aarch64.cmake
cmake/temp-lib/src/: CMakeLists.txt  TEMP.c  helper.h  log.c  log.h
cmake/temp-lib/tests/: CMakeLists.txt  TEMP_test.c
cmake/test/: .gitignore  CMakeLists.txt  README.md  m.sh
cmake/test/include/: version.h.in
cmake/test/script/cmake/: deb.cmake
cmake/test/src/: CMakeLists.txt  main.c
cmake/test/tests/: test.c  test.h  test_helper.c
cmake/test/unit/: log.c  log.h
cmake/test/unit/math/: CMakeLists.txt
cmake/tests/: CMakeLists.txt  test.h  test_demo1.c
cmake/unit/: log.c
cmake/unit/math/: my_math.c
dot/: digraph_test.dot  graph_test.dot  hash_example.dot
drm/: m.sh  test.c
egl/: README.md  demo.c  egl_gbm_render.c  egl_off-scree_rendering.c  m.sh  test_egl_gbm.c  xeglthreads.c
ffmpeg/: avfilter_video.c
glx/: glx_multi_thread_render.c  m.sh
gnuplot/: gnuplot.sh  m.sh  tst.csv  tst.plot
input/: hp_event.c  injectevent.c  mouse_interval.c  vmt.c
j-link/: load_bootrom.sh  s3c2440.jflash
jpeg/: Makefile  YUVtoRGB.c  a.c  bmp.c  bmp2rgb565.c  dct.c  jpeg_huffman_ac_dc_table.c  quantize.c  zigzag1.c  zigzag2.c
kvm/: README.md
logger/: README.md
makefile/: Makefile  VERSION
mips/: RADDME.md  mk.sh  no_prefetch-loop-arrays.s  prefetch-loop-arrays.c  prefetch-loop-arrays.s
nvidia/: README.md  m.sh  nvml.h  nvml_tool.c
openGL/: a.cpp  demo1.c  m.sh  test.c  test_glClear.c  yuv_play  yuv_play.c
process/: a.out  a.s  core  fork.c  kill.c  pipe.c  popen.c  setitimer.c  signal.c
pulseview/: README.md
rust/: env.sh  m.sh
shell/: adjust_ff_name.sh  amdgpu-install  array_arg.sh  auto_compact_monitor.sh  awk_val.sh  bash_log.sh  build_ffmpeg.sh  check_ip.sh  cmdargs.sh  color.sh  countdown.sh  cpu.sh  cpuinfo.sh  data_unit.sh  devmem.sh  dict.sh  etc_num.sh  etc_num2.sh  etc_num3.sh  file_crc.sh  file_multi_process.sh  find_file.sh  first.sh  fit2fat_for_AP3010DN-V2.sh  get_rand.sh  get_rss.sh  get_thread_stat.sh  gitlab_sync.sh  hello.sh  if.sh  input.sh  install_madplay.sh  iperf3_multi_run.sh  m.sh  meminfo  mkreleasehdr.sh  mult_terminal.sh  os_info.sh  pack_data.sh  parse_smaps.awk  (+16 more)
simd/: README.md
socket/: get_ip_mac.c
thread/: Makefile
tools/: devmem.c  devmem2.c  git_file_check.sh  test_memcopy.c  thread_top.c  vmstat.c
video/: colorspace.c
video/vaapi/: CMakeLists.txt  README.md  main.c
video/vaapi/common/: CMakeLists.txt  va_display.c  va_display_drm.c
video/vaapi/enc/: CMakeLists.txt
yaml/: README.md  m.sh  run-parser.c  test.c  tst.yaml
(+1650 files in other folders)
